--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ input {
   width: 15em;
   height: 2.5em;
   margin-bottom: 7px;
+  border-radius: 4px;
+  border: 2px solid rgb(231, 231, 231);
 }
 
 .loginBtn {
@@ -30,4 +32,3 @@ input {
   border: none; /* Remove the default button border */
   cursor: pointer;
 }
-/* 231 for border line */
